@@ -117,6 +117,7 @@ struct ovsdb_error *ovsdb_row_from_json(struct ovsdb_row *,
     OVS_WARN_UNUSED_RESULT;
 struct json *ovsdb_row_to_json(const struct ovsdb_row *,
                                const struct ovsdb_column_set *include);
+void ovsdb_row_to_string(const struct ovsdb_row *, struct ds *);
 
 static inline const struct uuid *
 ovsdb_row_get_uuid(const struct ovsdb_row *row)
