@@ -63,10 +63,14 @@ struct ovsdb_table {
      * ovsdb_row"s.  Each of the hmap_nodes in indexes[i] are at index 'i' at
      * the end of struct ovsdb_row, following the 'fields' member. */
     struct hmap *indexes;
+
+    bool log; /* True if logging is enabled for this table. */
 };
 
 struct ovsdb_table *ovsdb_table_create(struct ovsdb_table_schema *);
 void ovsdb_table_destroy(struct ovsdb_table *);
+void ovsdb_table_logging_enable(struct ovsdb_table *, bool);
+bool ovsdb_table_is_logging_enabled(struct ovsdb_table *table);
 
 const struct ovsdb_row *ovsdb_table_get_row(const struct ovsdb_table *,
                                             const struct uuid *);
