@@ -14,6 +14,9 @@ Post-v2.17.0
    - OVSDB:
      * 'relay' service model now supports transaction history, i.e. honors the
        'last-txn-id' field in 'monitor_cond_since' requests from clients.
+     * New unixctl command 'ovsdb-server/tlog-set DB:TABLE on|off".
+       If turned on, ovsdb-server will log (at level INFO and rate limited)
+       all operations that are committed to table TABLE in the DB database.
    - OVSDB-IDL:
      * New monitor mode flag, OVSDB_IDL_WRITE_CHANGED_ONLY, allowing
        applications to relax atomicity requirements when dealing with
